[package]
authors = ["ihciah"]
description = "DDNS on cloudflare worker"
edition = "2021"
license = "MIT/Apache-2.0"
name = "ddns"
repository = "https://github.com/ihciah/ddns-worker"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1"
cfg-if = "1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
worker = "0.0.18"

# For cf_base
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true
codegen-units = 1
